[package]
name = "wasm-complex-fir-filter-node"
version = "0.1.0"
authors = ["cho45 <cho45@lowreal.net>"]
edition = "2018"
description = "complex-fir-filter-node backend"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
#debug = true

[dependencies]
num-complex = "0.2"
wasm-bindgen = "0.2"
wee_alloc = "*"
console_error_panic_hook = "*"

